update file endpoint part one (#2002)
* update file endpoint part one

* returning void

* updating openapi schema

* removing documentation changes

* adding policy to template

* fixing nullpointer exception

* fixing uploaded file builder
